[gd_scene load_steps=11 format=3 uid="uid://cprjjm5h4ekcu"]

[ext_resource type="Script" path="res://Scenes/game.gd" id="1_m7lfg"]
[ext_resource type="Texture2D" uid="uid://brin51inge757" path="res://Assets/17520.webp" id="2_kl1qn"]
[ext_resource type="Texture2D" uid="uid://b0u42srl3unx5" path="res://Assets/Crops/Wheat/Wheat Unclicked.png" id="2_qfkpi"]
[ext_resource type="Texture2D" uid="uid://dh7odd7vqm0xs" path="res://Assets/Crops/Wheat/Wheat Clicked.png" id="3_t7da6"]
[ext_resource type="Script" path="res://Scenes/counter.gd" id="3_uxv5b"]
[ext_resource type="Texture2D" uid="uid://diqah7muje2fc" path="res://Assets/Crops/Carrot/Carrot Unclicked.png" id="4_3rv3r"]
[ext_resource type="Texture2D" uid="uid://4wqllivhmoux" path="res://Assets/Crops/Carrot/Carrot Clicked.png" id="5_32rep"]
[ext_resource type="Texture2D" uid="uid://bdumbr324blrr" path="res://Assets/Locked Button.png" id="6_gv8u2"]
[ext_resource type="Texture2D" uid="uid://cr3iodwaf4imp" path="res://Assets/Crops/Beet/Beet Button.png" id="8_8uduv"]
[ext_resource type="Texture2D" uid="uid://o53yawn1tb1l" path="res://Assets/Crops/Beet/Beet Button Pressed.png" id="9_17psd"]

[node name="game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m7lfg")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1157.0
offset_bottom = 656.0
texture = ExtResource("2_kl1qn")
expand_mode = 1

[node name="Wheat" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 150.0
offset_right = -637.0
offset_bottom = -398.0
grow_horizontal = 2
grow_vertical = 2

[node name="WheatButton" type="TextureButton" parent="Wheat"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
texture_normal = ExtResource("2_qfkpi")
texture_pressed = ExtResource("3_t7da6")
ignore_texture_size = true
stretch_mode = 0

[node name="WheatProfit" type="Label" parent="Wheat"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "1 Space Money"

[node name="Control" type="Control" parent="Wheat"]
layout_mode = 2

[node name="WheatAIAuto" type="Button" parent="Wheat/Control"]
layout_mode = 2
offset_left = 50.0
offset_top = -30.0
offset_right = 225.0
offset_bottom = 30.0
text = "Unlock AI Automate
30 Space Money"

[node name="WheatTimer" type="Timer" parent="Wheat/Control"]

[node name="WheatAuto" type="Label" parent="Wheat/Control"]
visible = false
layout_mode = 0
offset_left = 125.0
offset_top = -30.0
offset_right = 225.0
offset_bottom = 30.0
text = "1 Wheat per Second"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Carrot" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -64.0
offset_right = 515.0
offset_bottom = 36.0
grow_vertical = 2

[node name="CarrotButton" type="TextureButton" parent="Carrot"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
disabled = true
texture_normal = ExtResource("4_3rv3r")
texture_pressed = ExtResource("5_32rep")
texture_disabled = ExtResource("6_gv8u2")
stretch_mode = 0

[node name="CarrotProfit" type="Label" parent="Carrot"]
visible = false
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
text = "5 Space Money"

[node name="CarrotUnlock" type="Button" parent="Carrot"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
text = "Unlock for 25 Space Money"

[node name="Beet" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 370.0
offset_right = 515.0
offset_bottom = 470.0

[node name="BeetButton" type="TextureButton" parent="Beet"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
disabled = true
texture_normal = ExtResource("8_8uduv")
texture_pressed = ExtResource("9_17psd")
texture_disabled = ExtResource("6_gv8u2")
stretch_mode = 0

[node name="BeetProfit" type="Label" parent="Beet"]
visible = false
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
text = "25 Space Money"

[node name="BeetUnlock" type="Button" parent="Beet"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
text = "Unlock for 250 Space Money"

[node name="Counter" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 1.0
offset_bottom = 55.0
grow_horizontal = 2
script = ExtResource("3_uxv5b")

[node name="SpaceMoneyLable" type="Label" parent="Counter"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0 Space Money"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Crops" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 70.0
offset_right = -602.0
offset_bottom = -518.0
grow_horizontal = 2
grow_vertical = 2

[node name="CropsLable" type="Label" parent="Crops"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Crops"
horizontal_alignment = 1

[node name="Upgrades" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 70.0
offset_right = 1150.0
offset_bottom = 130.0

[node name="Label" type="Label" parent="Upgrades"]
custom_minimum_size = Vector2(550, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Upgrades"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="profit_changed" from="." to="Counter" method="_on_game_profit_changed"]
[connection signal="button_down" from="Wheat/WheatButton" to="." method="_on_wheat_button_button_down"]
[connection signal="pressed" from="Wheat/Control/WheatAIAuto" to="." method="_on_wheat_ai_auto_pressed"]
[connection signal="timeout" from="Wheat/Control/WheatTimer" to="." method="_on_wheat_timer_timeout"]
[connection signal="button_down" from="Carrot/CarrotButton" to="." method="_on_carrot_button_button_down"]
[connection signal="pressed" from="Carrot/CarrotUnlock" to="." method="_on_carrot_unlock_pressed"]
[connection signal="button_down" from="Beet/BeetButton" to="." method="_on_beet_button_button_down"]
[connection signal="pressed" from="Beet/BeetUnlock" to="." method="_on_beet_unlock_pressed"]
